<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="SpaceMouseInputs" Id="{7e29a242-0e50-4308-9995-784685bc9fc3}">
    <Declaration><![CDATA[TYPE SpaceMouseInputs :
STRUCT
	X	: INT;
	Y	: INT;
	Z	: INT;
	A	: INT;
	B	: INT;
	C	: INT;
	Btn1	: BOOL;
	Btn2	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>